--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,5 +3,28 @@ name = "matcher"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
+authors = [
+    { name = "Mark Giraud", email = "mark.giraud@iosb.fraunhofer.de" }
+]
 requires-python = ">=3.13"
-dependencies = []
+
+dependencies = [
+    "hatchling>=1.27.0",
+]
+
+[project.scripts]
+assetman = "assetman.main:main"
+csafman = "csafman.main:main"
+matcher = "matcher.main:main"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "pre-commit>=4.2.0",
+    "ruff>=0.11.13",
+    "ruff-lsp>=0.0.62",
+    "mypy>=1.16.0",
+]
