--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,13 +3,17 @@ name = "matcher"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
+license = "MIT OR Apache-2.0"
 authors = [
     { name = "Mark Giraud", email = "mark.giraud@iosb.fraunhofer.de" }
 ]
 requires-python = ">=3.13"
 
 dependencies = [
+    "aiohttp>=3.12.13",
+    "asyncpg>=0.30.0",
     "hatchling>=1.27.0",
+    "sqlalchemy[asyncio]>=2.0.0",
 ]
 
 [project.scripts]
@@ -21,10 +25,18 @@ matcher = "matcher.main:main"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["src/assetman", "src/csafman", "src/manager", "src/matcher", "src/cachedb"]
+
+[tool.uv.workspace]
+members = [
+    "plugins/asset_source/netbox",
+]
+
+
 [dependency-groups]
 dev = [
     "pre-commit>=4.2.0",
     "ruff>=0.11.13",
-    "ruff-lsp>=0.0.62",
     "mypy>=1.16.0",
 ]
