--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ requires-python = ">=3.13"
 dependencies = [
     "aiohttp>=3.12.13",
     "asyncpg>=0.30.0",
+    "colorlog>=6.9.0",
     "hatchling>=1.27.0",
+    "matcher-netbox-plugin",
     "sqlalchemy[asyncio]>=2.0.0",
 ]
 
@@ -26,12 +28,15 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/assetman", "src/csafman", "src/manager", "src/matcher", "src/cachedb"]
+packages = ["src/assetman", "src/csafman", "src/manager", "src/matcher", "src/cachedb", "src/common"]
 
 [tool.uv.workspace]
 members = [
     "plugins/asset_source/netbox",
 ]
+
+[tool.uv.sources]
+matcher-netbox-plugin = { workspace = true }
 
 
 [dependency-groups]
