--- a/plugins/asset_source/netbox/pyproject.toml
+++ b/plugins/asset_source/netbox/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 ]
 requires-python = ">=3.13"
 dependencies = [
-    "matcher",
+    "csaf_matcher",
 ]
 
 [project.scripts]
@@ -19,4 +19,4 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.uv.sources]
-matcher = { workspace = true }
+csaf_matcher = { workspace = true }
