--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "matcher"
+name = "csaf_matcher"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -21,14 +21,14 @@ dependencies = [
 [project.scripts]
 assetman = "assetman.main:main"
 csafman = "csafman.main:main"
-matcher = "matcher.main:main"
+csaf_matcher = "matcher.main:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/assetman", "src/csafman", "src/manager", "src/matcher", "src/cachedb", "src/common"]
+packages = ["src/csaf_matcher/assetman", "src/csaf_matcher/csafman", "src/csaf_matcher/manager", "src/csaf_matcher/matcher", "src/csaf_matcher/cachedb", "src/csaf_matcher/common"]
 
 [tool.uv.workspace]
 members = [
