--- a/assets/plugin_configs/netbox_A.toml
+++ b/assets/plugin_configs/netbox_A.toml
@@ -1,15 +1,12 @@
 # Netbox plugin configuration
 
+[DataSource]
 # Plugin name must match the module name
 plugin_name = "matcher_netbox_plugin"
+timeout_seconds = 30
+update_interval = 60
 
-# Plugin type (currently only DataSource is supported)
-plugin_type = "DataSource"
-
-# Plugin-specific configuration
+[DataSource.Netbox]
+# Netbox-specific configuration
 api_url = "https://netbox.example.com/api"
 api_token = "abcdef123456"
-
-# Additional configuration options
-timeout_seconds = 30
-max_retries = 3
