--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "csaf_matcher"
+name = "dina.matcher"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -14,21 +14,25 @@ dependencies = [
     "asyncpg>=0.30.0",
     "colorlog>=6.9.0",
     "hatchling>=1.27.0",
-    "matcher-netbox-plugin",
+    "dina.matcher.netbox",
     "sqlalchemy[asyncio]>=2.0.0",
 ]
 
+[project.optional-dependencies]
+netbox = ["dina.matcher.netbox"]
+
 [project.scripts]
-assetman = "assetman.main:main"
-csafman = "csafman.main:main"
-csaf_matcher = "matcher.main:main"
+assetman = "dina.assetman.main:main"
+csafman = "dina.csafman.main:main"
+csaf_matcher = "dina.matcher.main:main"
+csaf_matcher_cli = "dina.cli.main:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/csaf_matcher/assetman", "src/csaf_matcher/csafman", "src/csaf_matcher/manager", "src/csaf_matcher/matcher", "src/csaf_matcher/cachedb", "src/csaf_matcher/common"]
+packages = ["src/dina"]
 
 [tool.uv.workspace]
 members = [
@@ -36,7 +40,7 @@ members = [
 ]
 
 [tool.uv.sources]
-matcher-netbox-plugin = { workspace = true }
+"dina.matcher.netbox" = { workspace = true }
 
 
 [dependency-groups]
