--- a/plugins/asset_source/sample/pyproject.toml
+++ b/plugins/asset_source/sample/pyproject.toml
@@ -1,5 +1,6 @@
 [project]
-name = "dina.plugins.datasource.netbox_fetcher"
+# The name must match `dina.plugins.datasource.<plugin_name>`
+name = "dina.plugins.datasource.sample"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -7,6 +8,8 @@ authors = [
     { name = "Mark Giraud", email = "mark.giraud@iosb.fraunhofer.de" }
 ]
 requires-python = ">=3.13"
+
+# All data source plugins depend on the base matcher package. Feel free to add any additional dependencies.
 dependencies = [
     "dina.matcher",
 ]
@@ -16,7 +19,7 @@ packages = ["src/dina"]
 
 # A datasource plugin must specify the correct DataSource class as an entry-point.
 [project.entry-points."dina.plugins.datasource"]
-netbox_fetcher = "dina.plugins.netbox.netbox:NetboxDataSource"
+sample = "dina.plugins.datasource.sample.sample:SampleDataSource"
 
 [build-system]
 requires = ["hatchling"]
