--- a/assets/assetman.toml
+++ b/assets/assetman.toml
@@ -6,4 +6,4 @@
 [Assetman]
 # A list of preprocessor plugins. The order in which they are provided
 # here is the order in which they are executed on the data.
-preprocessor_plugins = []
+preprocessor_plugins = ["identity"]
