--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,12 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-netbox_fetcher = ["dina.plugins.datasource.netbox_fetcher"]
-sample-fetcher = [
+datasource-netbox = ["dina.plugins.datasource.netbox_fetcher"]
+datasource-sample = [
     "dina-plugins-datasource-sample",
+]
+preprocessor-identity = [
+    "dina-plugins-preprocessing-identity",
 ]
 
 [project.scripts]
@@ -46,6 +49,7 @@ members = [
 [tool.uv.sources]
 "dina.plugins.datasource.netbox_fetcher" = { workspace = true }
 dina-plugins-datasource-sample = { workspace = true }
+dina-plugins-preprocessing-identity = { workspace = true }
 
 
 [dependency-groups]
