--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,4 +57,12 @@ dev = [
     "pre-commit>=4.2.0",
     "ruff>=0.11.13",
     "mypy>=1.16.0",
+    "pytest>=8.0.0",
+    "pytest-asyncio>=0.23.5",
+    "tomlkit>=0.12.0",
 ]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = "test_*.py"
+asyncio_mode = "auto"
