--- a/assets/assetsync.toml
+++ b/assets/assetsync.toml
@@ -1,5 +1,5 @@
-# A sample asset manager config.
-# The asset manager config must always contain an [Assetsync] entry.
+# A sample asset synchronizer config.
+# The asset synchronizer config must always contain an [Assetsync] entry.
 # The preprocessor plugins to use must be explicitly specified.
 # If no preprocessing is needed, use the default identity preprocessor.
 
@@ -7,3 +7,11 @@
 # A list of preprocessor plugins. The order in which they are provided
 # here is the order in which they are executed on the data.
 preprocessor_plugins = ["identity"]
+
+
+[Cachedb]
+host = "localhost"
+port = 5432
+database = "cachedb"
+username = "postgres"
+password = "postgres"
