--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,5 +5,7 @@ repos:
   hooks:
     # Run the linter.
     - id: ruff-check
+      exclude: src/dina/netbox_api
     # Run the formatter.
     - id: ruff-format
+      exclude: src/dina/netbox_api
