--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,10 +64,24 @@ dina-plugins-preprocessing-netbox = { workspace = true }
 [tool.ruff]
 exclude = ["plugins/asset_source/netbox/src/dina/plugins/datasource/netbox/api_client"]
 
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py", "*_test.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = [
+    "--strict-markers",
+    "--strict-config",
+    "--cov=src",
+    "--cov-report=html",
+    "--cov-report=term-missing"
+]
 
 [dependency-groups]
 dev = [
     "pre-commit>=4.2.0",
     "ruff>=0.11.13",
     "mypy>=1.16.0",
+    "pytest>=8.4.1",
+    "pytest-cov>=6.2.1",
 ]
