doc: add instructions on how to generate ISDuBA API client

--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,8 @@ marimo/_lsp/
 __marimo__/
 src/.DS_Store
 .DS_Store
+
+# ISDuBA API
+isduba-api.json
+plugins/asset_source/isduba/src/dina/plugins/datasource/isduba/api_client
+matching-agent-venv
