--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,12 @@ dependencies = [
     "hatchling>=1.27.0",
     "sqlalchemy[asyncio]>=2.0.0",
     "openapi-python-client",
+    "openapi-generator-cli",
     "httpx",
     "python-dateutil",
     "ruff>=0.12.0",
     "mypy>=1.16.1",
+    "isduba-client",
 ]
 
 [project.optional-dependencies]
@@ -53,6 +55,7 @@ members = [
     "plugins/asset_source/sample",
     "plugins/preprocessing/identity",
     "plugins/preprocessing/netbox",
+    "plugins/asset_source/isduba/src/dina/plugins/datasource/isduba/api_client",
 ]
 
 [tool.uv.sources]
@@ -60,6 +63,7 @@ members = [
 dina-plugins-datasource-sample = { workspace = true }
 dina-plugins-preprocessing-identity = { workspace = true }
 dina-plugins-preprocessing-netbox = { workspace = true }
+isduba-client = { workspace = true }
 
 [tool.ruff]
 exclude = ["plugins/asset_source/netbox/src/dina/plugins/datasource/netbox/api_client"]
