--- a/.gitignore
+++ b/.gitignore
@@ -204,5 +204,5 @@ src/.DS_Store
 .DS_Store
 
 # ISDuBA API
-isduba-api.json
+plugins/asset_source/isduba/src/dina/plugins/datasource/isduba/isduba-api.json
 plugins/asset_source/isduba/src/dina/plugins/datasource/isduba/api_client
