--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
 
 [project.optional-dependencies]
 datasource-netbox = ["dina.plugins.datasource.netbox_fetcher"]
+datasource-isduba = ["dina.plugins.datasource.isduba_fetcher"]
 datasource-sample = [
     "dina-plugins-datasource-sample",
 ]
