--- a/assets/plugin_configs/asset_source/isduba/isduba.toml
+++ b/assets/plugin_configs/asset_source/isduba/isduba.toml
@@ -1,7 +1,7 @@
 # An invalid plugin configuration
 
 [DataSource]
-plugin_name = "sample"
+plugin_name = "isduba_fetcher"
 timeout_seconds = 30
 update_interval = 60
 
