doc: git ignores isduba plugin config file

--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,4 @@ src/.DS_Store
 # ISDuBA API
 plugins/asset_source/isduba/src/dina/plugins/datasource/isduba/isduba-api.json
 plugins/asset_source/isduba/src/dina/plugins/datasource/isduba/api_client
+assets/plugin_configs/asset_source/isduba/isduba.toml
