doc: import isduba api client

--- a/plugins/asset_source/isduba/pyproject.toml
+++ b/plugins/asset_source/isduba/pyproject.toml
@@ -12,7 +12,8 @@ requires-python = ">=3.13"
 # All data source plugins depend on the base matcher package. Feel free to add any additional dependencies.
 dependencies = [
     "dina.matcher",
-    "openapi-generator-cli"
+    "isduba-api-client",
+    "openapi-generator-cli",
 ]
 
 [tool.hatch.build.targets.wheel]
@@ -28,3 +29,4 @@ build-backend = "hatchling.build"
 
 [tool.uv.sources]
 "dina.matcher" = { workspace = true }
+isduba-api-client = { workspace = true }
