--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "hatchling>=1.27.0",
     "sqlalchemy[asyncio]>=2.0.0",
     "openapi-python-client",
+    "openapi-generator-cli",
     "httpx",
     "python-dateutil",
     "ruff>=0.12.0",
@@ -50,8 +51,7 @@ members = [
     "plugins/asset_source/isduba",
     "plugins/asset_source/netbox",
     "plugins/asset_source/sample",
-    "plugins/preprocessing/identity",
-    "plugins/asset_source/isduba/src/dina/plugins/datasource/isduba/api_client",
+    "plugins/preprocessing/identity"
 ]
 
 [tool.uv.sources]
