doc: comment out openapi-generator-cli in global pyproject.toml, update uv.lock

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "hatchling>=1.27.0",
     "sqlalchemy[asyncio]>=2.0.0",
     "openapi-python-client",
-    "openapi-generator-cli",
+    #"openapi-generator-cli",
     "httpx",
     "python-dateutil",
     "ruff>=0.12.0",
