doc: adapt isduba fetcher install script

--- a/plugins/asset_source/isduba/pyproject.toml
+++ b/plugins/asset_source/isduba/pyproject.toml
@@ -12,8 +12,8 @@ requires-python = ">=3.13"
 # All data source plugins depend on the base matcher package. Feel free to add any additional dependencies.
 dependencies = [
     "dina.matcher",
-    "openapi-generator-cli",
-    "isduba-api-client"
+    "isduba-api-client",
+    "openapi-generator-cli>=7.14.0",
 ]
 
 [tool.hatch.build.targets.wheel]
