--- a/.gitignore
+++ b/.gitignore
@@ -206,4 +206,5 @@ src/.DS_Store
 # ISDuBA API
 assets/plugin_configs/asset_source/isduba/active/isduba.toml
 plugins/asset_source/isduba/isduba-api.json
+plugins/asset_source/isduba/pyproject.toml
 plugins/asset_source/isduba/src/dina/plugins/datasource/isduba/api_client
