fix: Repair invalid api client build

--- a/plugins/asset_source/isduba/pyproject.toml
+++ b/plugins/asset_source/isduba/pyproject.toml
@@ -12,6 +12,7 @@ requires-python = ">=3.13"
 # All data source plugins depend on the base matcher package. Feel free to add any additional dependencies.
 dependencies = [
     "dina.matcher",
+    "urllib3",
 ]
 
 [tool.hatch.build.targets.wheel]
