fix: Use async for generator

--- a/plugins/asset_source/isduba/pyproject.toml
+++ b/plugins/asset_source/isduba/pyproject.toml
@@ -13,6 +13,7 @@ requires-python = ">=3.13"
 dependencies = [
     "dina.matcher",
     "urllib3",
+    "aiohttp-retry"
 ]
 
 [tool.hatch.build.targets.wheel]
