--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,9 @@ dependencies = [
     "httpx",
     "python-dateutil",
     "ruff>=0.12.0",
-    "mypy>=1.16.1"
+    "mypy>=1.16.1",
+    "fastapi>=0.116.1",
+    "uvicorn>=0.35.0",
 ]
 
 [project.optional-dependencies]
