--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "mypy>=1.16.1",
     "fastapi>=0.116.1",
     "uvicorn>=0.35.0",
+    "pydantic>=2.11.7",
 ]
 
 [project.optional-dependencies]
