feat: More sophisticated config loading

--- a/assets/plugin_configs/asset_source/isduba/sample/isduba.toml
+++ b/assets/plugin_configs/asset_source/isduba/sample/isduba.toml
@@ -3,7 +3,7 @@
 [DataSource]
 plugin_name = "isduba_fetcher"
 
-[DataSource.ISDuBA]
+[DataSource.Plugin]
 url = "http://endpoint.sample.com/"
 username = "username"
 password = "password"
