feat: Rework data model and reduce data transfers by using api parameters.

--- a/assets/plugin_configs/asset_source/isduba/sample/isduba.toml
+++ b/assets/plugin_configs/asset_source/isduba/sample/isduba.toml
@@ -2,6 +2,8 @@
 
 [DataSource]
 plugin_name = "isduba_fetcher"
+timeout_seconds = 30
+update_interval = 60
 
 [DataSource.Plugin]
 url = "http://endpoint.sample.com/"
