--- a/assets/plugin_configs/asset_source/isduba/sample/isduba.toml
+++ b/assets/plugin_configs/asset_source/isduba/sample/isduba.toml
@@ -10,3 +10,8 @@ url = "http://endpoint.sample.com/"
 username = "username"
 password = "password"
 verify_ssl = true
+database_host = "localhost"
+database_port = 2345
+database = "cachedb"
+database_username = "admin"
+database_password = "secret"
