refactor: Process fetching existing csaf products in batches to not exceed query maxsize

--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
       - ./init-scripts:/docker-entrypoint-initdb.d
     restart: unless-stopped
+    shm_size: 1G
 
 
 volumes:
