--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ requires-python = ">=3.13"
 
 dependencies = [
     "aiohttp>=3.12.13",
-    "asyncpg>=0.30.0",
+    "psycopg>=3.2.9",
     "colorlog>=6.9.0",
     "hatchling>=1.27.0",
     "sqlalchemy[asyncio]>=2.0.0",
