--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
     "fastapi>=0.116.1",
     "uvicorn>=0.35.0",
     "pydantic>=2.11.7",
-    "lazy-imports"
+    "lazy-imports",
+    "psycopg[binary]>=3.2.9",
 ]
 
 [project.optional-dependencies]
