feat: Introduce cleanup grace period and interval configuration options for synchronizer

--- a/assets/assetsync.toml
+++ b/assets/assetsync.toml
@@ -9,9 +9,12 @@
 [Synchronizer]
 # Synchronization inetrval in seconds.
 # The synchronizer will perform a fetching task every X seconds.
-sync_interval = 60
+sync_interval = 86400
 # Path to the directory containing asset data source plugin configuration TOML files
 plugin_configs_path = "./assets/plugin_configs/data_source/asset/"
+# Number of seconds before last successful run; entries older than (last_run - cleanup_grace_period)
+cleanup_grace_period = 86400
+cleanup_interval = 60
 
 # A list of preprocessor plugins. The order in which they are provided
 # here is the order in which they are executed on the data.
