--- a/assets/plugin_configs/data_source/csaf/sample/isduba.toml
+++ b/assets/plugin_configs/data_source/csaf/sample/isduba.toml
@@ -1,12 +1,13 @@
 # An invalid plugin configuration
 
 [DataSource]
+# The plugin name is the name used to install the extra feature when installing the asset synchronizer.
+# When developing a package, please note that the package name must be `dina.plugins.datasource.<plugin_name>`
 plugin_name = "isduba_fetcher"
-timeout_seconds = 30
-update_interval = 60
 
 [DataSource.Plugin]
 url = "http://endpoint.sample.com/"
+keycloak_url = "http://keycloak.sample.com/"
 username = "username"
 password = "password"
 verify_ssl = true
