--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,14 +31,10 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-datasource-netbox = ["dina.plugins.datasource.netbox_fetcher"]
-datasource-isduba = ["dina.plugins.datasource.isduba_fetcher"]
-datasource-sample = [
-    "dina-plugins-datasource-sample",
-]
-preprocessor-identity = [
-    "dina-plugins-preprocessing-identity",
-]
+netbox_fetcher = ["dina.plugins.datasource.netbox_fetcher"]
+isduba_fetcher = ["dina.plugins.datasource.isduba_fetcher"]
+sample = ["dina.plugins.datasource.sample"]
+preprocessor-identity = ["dina.plugins.preprocessing-identity"]
 
 [project.scripts]
 assetsync = "dina.assetsync.main:main"
@@ -69,7 +65,10 @@ dina-plugins-preprocessing-identity = { workspace = true }
 dina-plugins-preprocessing-netbox = { workspace = true }
 
 [tool.ruff]
-exclude = ["plugins/asset_source/netbox/src/dina/plugins/datasource/netbox/api_client"]
+exclude = [
+    "plugins/asset_source/netbox/src/dina/plugins/datasource/netbox/api_client",
+    "dev"
+]
 respect-gitignore = true
 
 [tool.pytest.ini_options]
