--- a/assets/matcher.toml
+++ b/assets/matcher.toml
@@ -1,5 +1,6 @@
 [Matcher]
 sync_interval = 60
+match_threshold = 60
 # Path to asset data source plugin configs used for the assetsync
 asset_plugins_path = "./assets/plugin_configs/data_source/asset"
 # Path to CSAF data source plugin configs used for the csafsync
