--- a/assets/assetsync.toml
+++ b/assets/assetsync.toml
@@ -18,7 +18,7 @@ cleanup_interval = 60
 
 # A list of preprocessor plugins. The order in which they are provided
 # here is the order in which they are executed on the data.
-preprocessor_plugins = ["identity"]
+preprocessor_plugins = ["identity", "default"]
 
 [Synchronizer.Api]
 # The address to serve on
