--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,9 @@ testpaths = ["tests"]
 python_files = ["test_*.py", "*_test.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
+markers = [
+    "asyncio: mark a test as using asyncio"
+]
 addopts = [
     "--strict-markers",
     "--strict-config",
