--- a/assets/matcher.toml
+++ b/assets/matcher.toml
@@ -9,6 +9,7 @@ csaf_plugins_path = "./assets/plugin_configs/data_source/csaf"
 [Matcher.Api]
 host = "0.0.0.0"
 port = 8998
+access_token_expire_minutes = 10
 
 [Matcher.Cachedb]
 host = "localhost"
