--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "pyjwt>=2.10.1",
     "pwdlib[argon2]>=0.3.0",
     "python-multipart>=0.0.20",
+    "dotenv>=0.9.9",
 ]
 
 [project.optional-dependencies]
