--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,9 @@ dependencies = [
     "dotenv>=0.9.9",
     "packaging>=24.1",
     "numpy>=1.26.0",
+    "pytest>=8.4.1",
+    "pytest-cov>=6.2.1",
+    "pytest-asyncio>=0.25.0",
 ]
 
 [project.optional-dependencies]
@@ -80,7 +83,11 @@ exclude = [
 respect-gitignore = true
 
 [tool.pytest.ini_options]
-testpaths = ["tests"]
+testpaths = [
+    "tests",
+    "plugins/asset_source/*/tests",
+    "plugins/preprocessing/*/tests"
+]
 python_files = ["test_*.py", "*_test.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
@@ -94,6 +101,8 @@ addopts = [
     "--cov-report=html",
     "--cov-report=term-missing"
 ]
+asyncio_mode = "auto"
+
 
 [dependency-groups]
 dev = [
