--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,9 @@ dependencies = [
     "pytest>=8.4.1",
     "pytest-cov>=6.2.1",
     "pytest-asyncio>=0.25.0",
+    "testcontainers[test]>=4.8.2",
+    "psycopg[async]>=3.2.9",
+    "asyncpg>=0.29.0",
 ]
 
 [project.optional-dependencies]
@@ -102,7 +105,11 @@ addopts = [
     "--cov-report=term-missing"
 ]
 asyncio_mode = "auto"
-
+filterwarnings = [
+    "ignore::DeprecationWarning:testcontainers.*:",
+    "ignore::DeprecationWarning:sqlalchemy.*:",
+    "ignore::UserWarning"
+]
 
 [dependency-groups]
 dev = [
