--- a/plugins/asset_source/netbox/pyproject.toml
+++ b/plugins/asset_source/netbox/pyproject.toml
@@ -11,8 +11,16 @@ dependencies = [
     "dina.matcher",
 ]
 
+[tool.hatch.build.targets.sdist]
+include= [
+    "assets",
+    "src",
+    "build_hook.py",
+    "README.md"
+]
 [tool.hatch.build.targets.wheel]
 packages = ["src/dina"]
+artifacts = ["src/dina/plugins/datasource/netbox/generated"]
 
 # A datasource plugin must specify the correct DataSource class as an entry-point.
 [project.entry-points."dina.plugins.datasource"]
