--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,20 +11,18 @@ requires-python = ">=3.13,<3.14"
 
 dependencies = [
     "aiohttp>=3.12.13",
-    "psycopg>=3.2.9",
+    "psycopg[binary]>=3.2.9",
     "colorlog>=6.9.0",
     "hatchling>=1.27.0",
     "sqlalchemy[asyncio]>=2.0.0",
     "openapi-python-client",
     "httpx",
     "python-dateutil",
-    "ruff>=0.12.0",
     "mypy>=1.16.1",
     "fastapi>=0.116.1",
     "uvicorn>=0.35.0",
     "pydantic>=2.11.7",
     "lazy-imports",
-    "psycopg[binary]>=3.2.9",
     "polars>=0.20.30",
     "rapidfuzz>=3.9.7",
     "packaging>=24.1",
@@ -34,11 +32,6 @@ dependencies = [
     "dotenv>=0.9.9",
     "packaging>=24.1",
     "numpy>=1.26.0",
-    "pytest>=8.4.1",
-    "pytest-cov>=6.2.1",
-    "pytest-asyncio>=0.25.0",
-    "testcontainers[test]>=4.8.2",
-    "psycopg[async]>=3.2.9",
     "asyncpg>=0.29.0",
 ]
 
@@ -118,6 +111,9 @@ dev = [
     "mypy>=1.16.0",
     "pytest>=8.4.1",
     "pytest-cov>=6.2.1",
+    "pytest-asyncio>=0.25.0",
     "sphinx>=7.3.7",
     "furo>=2024.8.6",
+    "ruff>=0.12.0",
+    "testcontainers>=4.8.2",
 ]
